[package]
name = "preoomkiller"
description = "Softly kills your process with SIGTERM before it runs out of memory."
edition = "2021"
version = "0.1.0" # modified via `rake bump:patch`

authors = ["Michael Grosser <michael@grosser.it>"]
license = "MIT"
homepage = "https://github.com/grosser/preoomkiller"
include = [
    "Cargo.toml",
    "src/main.rs",
    "Readme.md"
]
exclude = [
    "vendor"
]

[dependencies]
regex = "0.2"
libc = "0.2"
signal-hook = "0.3.10"
reqwest = { version = "^0.11", features = ["blocking"] }

getopts = "0.2"
clap = { version = "^4", features = ["derive", "env"] }
